@@ -17,7 +17,7 @@ release=0
 # only requirement is that it must be entirely printable ASCII 
 # characters and have no white space.
 
-greek=rc1lanl1
+greek=rc2lanl1
 
 # If want_svn=1, then the SVN r number will be included in the overall
 # Open MPI version number in some form.
