@@ -338,7 +338,7 @@ static inline int ompi_fifo_write_to_head_same_base_addr(void *data,
         if(error_code != OMPI_CB_ERROR) {
             fifo->head->cb_overflow = false;
             opal_atomic_unlock(&(fifo->fifo_lock));
-            return error_code;
+            return OMPI_SUCCESS;
         }
 
         /* see if next queue is available - while the next queue
@@ -384,11 +384,11 @@ static inline int ompi_fifo_write_to_head_same_base_addr(void *data,
         error_code=ompi_cb_fifo_write_to_head_same_base_addr(data,
                 (ompi_cb_fifo_t *)&(fifo->head->cb_fifo));
         if( OMPI_CB_ERROR == error_code ) {
-            return error_code;
+            return OMPI_ERROR;
         }
     }
 
-    return error_code;
+    return OMPI_SUCCESS; 
 }
 
 
@@ -423,6 +423,11 @@ void *ompi_fifo_read_from_tail_same_base_addr( ompi_fifo_t *fifo)
         opal_atomic_lock(&(fifo->fifo_lock));
         if(fifo->tail->cb_overflow == true) {
             fifo->tail->cb_overflow=false;
+            /* make sure that writer is not writing to this fifo any more */
+            if(fifo->head == ((char*)fifo->tail)) {
+                opal_atomic_unlock(&(fifo->fifo_lock));
+                return return_value;
+            }
             fifo->tail=fifo->tail->next_fifo_wrapper;
         }
         opal_atomic_unlock(&(fifo->fifo_lock));
@@ -466,6 +471,11 @@ static inline void *ompi_fifo_read_from_tail(ompi_fifo_t *fifo,
         opal_atomic_lock(&(fifo->fifo_lock));
         if(t_ptr->cb_overflow == true) {
             t_ptr->cb_overflow = false;
+            /* make sure that writer is not writing to this fifo any more */
+            if(fifo->head == ((char*)fifo->tail) + offset) {
+                opal_atomic_unlock(&(fifo->fifo_lock));
+                return return_value;
+            }
             fifo->tail = t_ptr->next_fifo_wrapper;
         }
         opal_atomic_unlock(&(fifo->fifo_lock));
